--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -6,10 +6,10 @@
   </head>
   <body>
     {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div>username dan password tidak cocok</div>
     {% endif %}
 
-    <form action="{{ path('belajarlagi') }}" method="post">
+    <form action="{{path('loginlagi')}}" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="_username" value="{{ last_username }}" /><br>
         <label for="password">Password:</label>
